# fifo-accounting

./: .gitignore  Cargo.toml  Config.toml  LICENSE  Prices.toml  README.md
src/: fifo.rs  main.rs  parser.rs  price_provider.rs  types.rs  validation.rs  xlsx_parser.rs
src/fifo/: mod.rs
src/fifo-types/: Cargo.toml
src/fifo-types/src/: core.rs  csv.rs  lib.rs  parser.rs  price_provider.rs
src/parser/: mod.rs  xlsx_parser.rs
src/types/: Cargo.toml  core.rs  csv.rs  mod.rs  parser.rs
src/types/src/: csv.rs  lib.rs  parser.rs
src/validation/: mod.rs
