[package]
name = "fifo-accounting"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = { version = "0.26.1", features = ["dates"] }
chrono = "0.4.38"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
rust_decimal = "1.36.0"
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
